Closed
Bug 1302516
Opened 9 years ago
Closed 9 years ago
Make ZipCollection thread-safe
Categories
(Firefox for Android Graveyard :: General, defect)
Tracking
(firefox50 fixed, firefox51 fixed)
RESOLVED
FIXED
Firefox 51
People
(Reporter: esawin, Assigned: esawin)
References
Details
Attachments
(1 file)
|
3.41 KB,
patch
|
esawin
:
review+
ritu
:
approval-mozilla-beta+
|
Details | Diff | Splinter Review |
Moving patch 3 out of bug 1302189.
| Assignee | ||
Comment 1•9 years ago
|
||
Addressed comments from https://bugzilla.mozilla.org/show_bug.cgi?id=1302189#c6.
Attachment #8790903 -
Flags: review+
Pushed by esawin@mozilla.com:
https://hg.mozilla.org/integration/mozilla-inbound/rev/5bfde65d691a
[1.2] Add mutex locking to ZipCollection zip vector access. r=glandium
Comment 3•9 years ago
|
||
| bugherder | ||
Status: NEW → RESOLVED
Closed: 9 years ago
Resolution: --- → FIXED
Target Milestone: --- → Firefox 51
We should probably uplift this (and maybe other linker fixes?)
Flags: needinfo?(esawin)
| Assignee | ||
Comment 5•9 years ago
|
||
Comment on attachment 8790903 [details] [diff] [review]
0001-Bug-1302516-1.2-Add-mutex-locking-to-ZipCollection-z.patch
Approval Request Comment
[Feature/regressing bug #]: None
[User impact if declined]: Intermittent crashes on startup
[Describe test coverage new/current, TreeHerder]: Nightly only
[Risks and why]: Minimal, it just adds a mutex around container access
[String/UUID change made/needed]: None
Flags: needinfo?(esawin)
Attachment #8790903 -
Flags: approval-mozilla-beta?
Attachment #8790903 -
Flags: approval-mozilla-aurora?
status-firefox50:
--- → affected
Comment on attachment 8790903 [details] [diff] [review]
0001-Bug-1302516-1.2-Add-mutex-locking-to-ZipCollection-z.patch
Crash fix, Beta50+
(already on Aurora51)
Attachment #8790903 -
Flags: approval-mozilla-beta?
Attachment #8790903 -
Flags: approval-mozilla-beta+
Attachment #8790903 -
Flags: approval-mozilla-aurora?
Comment 7•9 years ago
|
||
| bugherder uplift | ||
Updated•5 years ago
|
Product: Firefox for Android → Firefox for Android Graveyard
You need to log in
before you can comment on or make changes to this bug.
Description
•