Bug 1302516 - [1.2] Add mutex locking to ZipCollection zip vector access. r=glandium